# monarch-money-mcp-enhanced

./: .env.example  .gitignore  .mcpbignore  CHANGELOG.md  PERFORMANCE.md  README.md  RELEASE_PROCESS.md  debug_env.py  manifest.json  monarch-money-enhanced-0.11.0.mcpb  monitor_production_metrics.py  pyproject.toml  pytest.ini  release_notes.md  release_notes_v0.11.0.md  run_server.py  run_tests.sh  server.py  server_static.py  simple_test.py  test_auth.py  test_live_performance.py  test_optimizations.py
.github/: dependabot.yml
.github/workflows/: auto-release.yml  publish-pypi.yml  release.yml  test.yml
monarch_money_mcp_enhanced.egg-info/: PKG-INFO
vendor_temp/gql-4.0.0.dist-info/: RECORD
vendor_temp/httpx-0.28.1.dist-info/: RECORD
vendor_temp/jsonschema-4.25.1.dist-info/: RECORD
vendor_temp/mcp-1.14.1.dist-info/: RECORD
vendor_temp/monarchmoney_enhanced-0.11.0.dist-info/: RECORD
vendor_temp/oathtool-2.4.0.dist-info/: RECORD
