[project]
name = "monarch-money-mcp-enhanced"
description = "Enhanced MCP server for MonarchMoney financial data access with dynamic tool generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.4",
    "monarchmoney-enhanced>=0.8.0",
]

[project.scripts]
monarch-money-mcp-enhanced = "server:run"

[tool.setuptools]
py-modules = ["server"]
